--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                     <ul>
                       <li><a href="https://www.facebook.com/fernando.romo.43/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
                       <li><a href="https://www.instagram.com/fernando_romo43/?hl=es-la"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://twitter.com/Fernand22388903"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://twitter.com/Fer_Romo43"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
