--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Fernando Romo</span></p>
                       <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
-                      <p><span class="title-s">Email: </span> <span>ferskull43@gmail.com</span></p>
+                      <p><span class="title-s">Email: </span> <span>lopezromo.fer43@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+52) 9984114644</span></p>
                     </div>
                   </div>
                 </div>
-                <div class="skill-mf">
+                <!-- <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <span>HTML</span> <span class="pull-right">80%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span>CSS3</span> <span class="pull-right">40%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>PHP</span> <span class="pull-right">50%</span>
@@ -106,12 +106,12 @@
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span>JAVASCRIPT</span> <span class="pull-right">50%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
@@ -121,20 +121,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
-                  </p>
-                  <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-                  </p>
-                  <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                    Software engineering student with a keen interest in software development and analysis. With the ability to learn and apply my knowledge to the professional field. Looking for a job opportunity in which to develop my skills and gain experience.
                   </p>
                 </div>
               </div>
@@ -152,17 +139,14 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Services
+              Skills
             </h3>
-            <p class="subtitle-a">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            </p>
             <div class="line-mf"></div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-code-working"></i></span>
@@ -177,7 +161,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
@@ -192,6 +176,22 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Responsive Design</h2>
+              <p class="s-description text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                provident vitae! Magni
+                tempora perferendis eum non provident.
+              </p>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </section>
@@ -225,7 +225,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Lorem impsum dolor</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -249,7 +249,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Loreda Cuno Nere</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -273,7 +273,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Mavrito Lana Dere</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -297,7 +297,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Bindo Laro Cado</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -321,7 +321,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Studio Lena Mado</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -345,7 +345,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Studio Big Bang</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -429,7 +429,7 @@
                       mollitia inventore?
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Mexico Cancun Quintana Roo</li>
+                      <li><span class="ion-ios-location"></span> Mexico Cancún Quintana Roo</li>
                       <li><span class="ion-ios-telephone"></span> (+52) 9984114644</li>
                       <li><span class="ion-email"></span> ferskull43@gmail.com</li>
                     </ul>
@@ -439,6 +439,7 @@
                       <li><a href="https://www.facebook.com/fernando.romo.43/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
                       <li><a href="https://www.instagram.com/fernando_romo43/?hl=es-la"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href="https://twitter.com/Fer_Romo43"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://github.com/Romo43"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
