--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Fernando Romo</span></p>
+                      <p><span class="title-s">Name: </span> <span>Luis Fernando López Romo</span></p>
                       <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
                       <p><span class="title-s">Email: </span> <span>lopezromo.fer43@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+52) 9984114644</span></p>
@@ -164,7 +164,7 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+              <span class="ico-circle"> <i class="fab fa-php"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Responsive Design</h2>
@@ -488,6 +488,7 @@
   <script src="lib/typed/typed.min.js"></script>
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
+  <script src="https://kit.fontawesome.com/6fb0e64175.js" crossorigin="anonymous"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
