--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <!-- <div id="home" class="intro route bg-image" style="background-image: url(img/Intro.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/Intro.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
